# advent_of_code_2021

./: .gitignore  README.rst  pyproject.toml
advent_of_code_2021/: __init__.py  get_data.py
advent_of_code_2021/api/: application.py
advent_of_code_2021/api/parsers/: day01.py  day03.py  day04.py  day_01.py  day_02.py  day_04.py  day_05.py
advent_of_code_2021/day_01/: day01-1.py  day01-2.py  day01.py
advent_of_code_2021/day_02/: __init__.py  day02-1.py  day02-2.py  day02_1.py  day02_2.py
advent_of_code_2021/day_03/: __init__.py  day03-1.py  day03-2.py  day03_1.py  day03_2.py
advent_of_code_2021/day_04/: __init__.py  day04-1.py  day04_1.py  day04_2.py
advent_of_code_2021/day_05/: __init__.py  day05_1.py
tests/: conftest.py  test_day_01.py  test_day_02.py  test_day_05.py
