[tool.poetry]
name = "advent_of_code_2021"
version = "0.1.0"
description = ""
authors = ["Joseph Beaver <joseph.beaver@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
requests = "^2.26.0"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
