[tool.poetry]
name = "advent_of_code_2021"
version = "0.1.0"
description = ""
authors = ["Joseph Beaver <joseph.beaver@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
requests = "^2.26.0"
numpy = "^1.21.4"
Flask = "^2.0.2"
scipy = "^1.7.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.11b1"
autopep8 = "^1.6.0"
jedi = "^0.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
